<resources>
    <string name="app_name">BaseDeDatos</string>
    <string name="title_activity_alta">AltaActivity</string>
    <string name="name">Nombre</string>
    <string name="title">Título</string>
    <string name="author">Autor</string>
    <string name="price">Precio</string>
    <string name="add">Agregar</string>
    <string name="show">Mostrar</string>
    <string name="search">Buscar</string>
    <string name="exit">Salir</string>
</resources>
